# duckpilot

./: .gitignore  Cargo.toml  README.md  duckpilot.md
.claude/: settings.local.json
src/: app.rs  cli.rs  main.rs  models.rs
src/agent/: agent_loop.rs  message.rs  mod.rs  tool.rs
src/config/: global.rs  mod.rs  project.rs
src/engine/: mod.rs
src/llm/: mod.rs
src/tui/: event.rs  mod.rs  mouse.rs  terminal.rs  ui.rs
src/tui/widgets/: chat.rs  input.rs  mod.rs  schema_panel.rs  status_bar.rs  table_view.rs
