[package]
name = "duckpilot"
version = "0.1.0"
edition = "2024"
description = "🛸 DuckPilot - Local-first data analysis agent powered by DuckDB and LLM"
authors = ["lyq"]
license = "MIT"

[[bin]]
name = "duckpilot"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Data engine
duckdb = { version = "1.2", features = ["bundled"] }

# LLM
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling & logging
anyhow = "1"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3"
unicode-width = "0.2"
textwrap = "0.16"
tui-textarea = "0.7"

[profile.release]
opt-level = 3
lto = true
strip = true
